--- a/conf/default.conf
+++ b/conf/default.conf
@@ -5,7 +5,7 @@ server {
     client_max_body_size 32M;
 
     location / {
-        try_files $uri /index.php?$args;
+        try_files $uri /index.php$is_args$args;
     }
 
     location ~ \.php$ {
@@ -15,5 +15,12 @@ server {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+        internal;
+    }
+
+    # return 404 for all other php files not matching the front controller
+    # this prevents access to other php files you don't want to be accessible.
+    location ~ \.php$ {
+      return 404;
     }
 }
